# funtts

./: README.md  pyproject.toml
docs/: ENGINE_DEVELOPMENT_GUIDE.md  INSTALLATION_GUIDE.md  RELEASE_CHECKLIST.md  TTS_ENGINE_SELECTION_GUIDE.md
examples/: advanced_usage.py  basic_usage.py  comprehensive_example.py  utils_example.py
src/funtts/tts/azure/: README.md  tts.py
src/funtts/tts/bark/: README.md  tts.py
src/funtts/tts/coqui/: README.md  tts.py
src/funtts/tts/edge/: README.md  tts.py
src/funtts/tts/espeak/: README.md  tts.py
src/funtts/tts/indextts2/: README.md
src/funtts/tts/kitten/: README.md  tts.py
src/funtts/tts/pyttsx3/: README.md  tts.py
src/funtts/tts/tortoise/: README.md  tts.py
